# SDHCALStuff

./: CMakeLists.txt
exec/: applyNN.cxx  createOKTrees.cxx  minim.cxx  mulVsThr.cxx  plotMultiplicityMap.cxx  positionShiftPlot.cxx  trainNN.cxx  tuneElectrons.cxx
include/: DataMcCanvas.h  EnergyMinimisation.h  Event.h  EventList.h  Fit.h  HistoCreator.h  Minimisation.h  TimeCorrection.h
json/: example.json  exampleMinim.json
src/: DataMcCanvas.cpp  EnergyMinimisation.cpp  Event.cpp  EventList.cpp  Fit.cpp  HistoCreator.cpp  Minimisation.cpp  TimeCorrection.cpp  minim.cxx  tuneElectrons.cxx
